--- a/jsidplay2app/res/layout/activity_main.xml
+++ b/jsidplay2app/res/layout/activity_main.xml
@@ -231,13 +231,12 @@
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/jsidplay2" />
 
-                <EditText
+                <TextView
                     android:id="@+id/about"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
                     android:ems="10"
-                    android:inputType="textMultiLine|none"
                     android:text="@string/about"
                     android:textStyle="italic" />
             </LinearLayout>
